# VR_Arm_Hand_Teleop

./: .gitignore  display_hand.launch
custom_hand_description/: CMakeLists.txt  package.xml
custom_hand_description/launch/: display_hand.launch
custom_hand_description/meshes/meshes_left/: index_link1.STL  index_link3.STL  little_link0.STL  little_link1.STL  little_link2.STL  little_link3.STL  middle_link1.STL  middle_link2.STL  middle_link3.STL  ring_link0.STL  ring_link1.STL  thumb_link0.STL  thumb_link2.STL  thumb_link4.STL
custom_hand_description/meshes/meshes_right/: base_link.STL  index_link1.STL  index_link2.STL  index_link4.STL  little_link4.STL  middle_link0.STL  middle_link1.STL  middle_link2.STL  ring_link0.STL  ring_link1.STL  ring_link2.STL  thumb_link1.STL  thumb_link2.STL  thumb_link5.STL
custom_hand_description/urdf/: linkerhand_l20_left.urdf  linkerhand_l20_right.urdf
custom_robot_description/: CMakeLists.txt  package.xml
direct_teleop/: CMakeLists.txt  package.xml
direct_teleop/config/: arm_gazebo_controllers.yaml
direct_teleop/hand_retargeting_lib/: retargeting.py
direct_teleop/hand_retargeting_lib/L10/: fk_l10.py  robothandmodel_l10.py  utils_l10.py
direct_teleop/hand_retargeting_lib/L21/: config.py  fk.py  robothandmodel.py
direct_teleop/launch/: backend_only.launch  master_visualizer.launch  my_robot_in_gazebo.launch  real_robot_bringup.launch  rviz_visualize.launch  test_arm_only.launch
direct_teleop/msg/: DebugInfo.msg  LossInfo.msg  PicoHand.msg
direct_teleop/scripts/: hand_and_RGB_data_collector.py  hand_retargeting_algorithm_node.py  linkerhand_l10_controller.py  pico_data_provider.py  video_udp_sender.py
direct_teleop/src/: arm_rviz_controller.py  calculate_transform.py  debug_aggregator_node.py  get_robot_pose.py  hand_retargeting_algorithm_node.py  hand_retargeting_node.py  joint_state_combiner.py  keypoint_visualizer.py  linkerhand_l10_controller.py  pico_data_inspector.py  pico_data_provider.py  pico_data_simulator.py  pico_master_simulator.py  pico_pose_listener.py  simple_position_sender.py  vr_action_controller.py  vr_direct_controller.py  vr_direct_publisher_controller.py  vr_transparent_controller.py
direct_teleop/src/hand_retargeting_lib/: retargeting.py
direct_teleop/video_udp/: video_udp_sender.py
my_arm_controller/: CMakeLists.txt  arm_control_node.py  hand_service_node.py  package.xml
my_arm_controller/src/: hello_ros.py  simple_motion.py
my_robot_moveit_config/: .setup_assistant  package.xml
my_robot_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  rm_75_servo.yaml  rm_75_with_linkerhand.srdf  stomp_planning.yaml
my_robot_moveit_config/launch/: demo.launch  gazebo.launch  move_group.launch  moveit_servo.launch  planning_context.launch  sensor_manager.launch.xml
rm_hand_description/: CMakeLists.txt  package.xml
rm_hand_description/launch/: display.launch
rm_hand_description/meshes/meshes_left/: base_link.STL  index_link0.STL  index_link2.STL  index_link4.STL  little_link4.STL  (+7 more)
rm_hand_description/urdf/: linkerhand_l20_left.urdf.xacro  linkerhand_l21_left.xacro  linkerhand_l21_right.xacro  robot.urdf.xacro
teleop_nodes/: CMakeLists.txt  package.xml
teleop_nodes/launch/: teleop.launch
teleop_nodes/msg/: JointData.msg  UnifiedDataPacket.msg
teleop_nodes/src/: get_pose_node.py  pico_data_simulator_node.py  pico_real_bridge_node.py  servo_speed_test.py  teleop_arm_only.py  teleop_control_node.py  teleop_servo_node.py
teleop_utils/: CMakeLists.txt  package.xml  setup.py
(+78 files in other folders)
